tests/pass/parse/group/point_input.leo
function main(a: group) {
    let b = a;
}