tests/fail/parse/syntax/input_fail.leo
function main() {
    let input = 0u32;
}